# pypsa-network-analyzer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
configs/: default_config.yaml
configs/config_results_concat/: config_results_concat.yaml
configs/files/: network_files.yaml
configs/simulations/: network_files.yaml
data/generation/generation_hourly_data/: generation_BA_hourly_data.csv  generation_CY_hourly_data.csv  generation_GB_hourly_data.csv  generation_GE_hourly_data.csv  generation_MD_hourly_data.csv  generation_ME_hourly_data.csv  generation_SE_1_hourly_data.csv  generation_SE_2_hourly_data.csv  generation_SE_4_hourly_data.csv  generation_SE_hourly_data.csv  generation_XK_hourly_data.csv
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
pypsa_network_analyzer/: __init__.py
pypsa_network_analyzer/scripts/: __init__.py  network_analyzer_FEGU.py  plot_co2_emissions.py
pypsa_network_analyzer/utils/: entsoe_api.py
src/pypsa_network_analyzer/: __init__.py  data.py  network_analyzer.py  plot_figures_paper.py  score_analyzer.py  train.py
src/pypsa_network_analyzer/legacy_scripts/: EUR_total_generation.py  capacity_estimation.py  capacity_plot.py  check_hydro_gen.py  daily_e_price_profiles.py  daily_e_price_profiles_lukas.py  dispatch_compare.py  eur_total_installed_cap.py  gas_prices_retrieve.py  network_analyzer_FEGU.py  network_analyzer_hydro.py  plot_co2_emissions.py
src/pypsa_network_analyzer/plotting/: plot_figures_paper.py
src/pypsa_network_analyzer/scripts/: EUR_total_generation.py  __init__.py  capacity_plot.py  daily_e_price_profiles_lukas.py  dispatch_compare.py  gas_prices_retrieve.py  network_analyzer.py  result_analyzer.py  score_analyzer.py
src/pypsa_network_analyzer/utils/: ENTSOE_api_raw.py  __init__.py  logger_setup.py  plot_prices.py  setup_logger.py  utils.py
tests/: test_data.py
