[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pypsa-network-analyzer"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "pandas>=3.0.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "entsoe-py>=0.7.8",
    "numpy>=2.3.0,<2.4.0",
    "ipykernel>=7.1.0",
    "hydra-core>=1.3.0",
    "pydantic>=2.12.5",
    "dvc-gs>=3.0.2",
    "markdown>=3.10.1",
    "loguru>=0.7.3",
    "hydra-core>=1.3.2",
    "pypsa>=1.0.7",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
    "plotly>=6.5.2",
    "openpyxl>=3.1.5",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
