[project]
name = "pypsa_network_analyzer"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "entsoe-py>=0.7.8",
    "numpy>=2.3.0,<2.4.0",
    "ipykernel>=7.1.0",
    "hydra-core>=1.3.0",
    "pydantic>=2.12.5",
    "markdown>=3.10.1",
    "loguru>=0.7.3",
    "hydra-core>=1.3.2",
    "pypsa>=1.0.7",
    "pytest>=8.3.4",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff>=0.2.1",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
    "plotly>=6.5.2",
    "openpyxl>=3.1.5",
]


[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pypsa_network_analyzer"]
